# crust

./: .gitignore  Cargo.toml  Makefile  NOTICE  README.md  build.rs
crust-restorer/: Cargo.toml  Makefile  README.md
crust-restorer/src/: lib.rs
crust-syscall/src/: constants.rs  syscalls.rs
ffi/: sigframe_builder.c  sigframe_builder.h
src/: error.rs  lib.rs  main.rs
src/images/: checkpoint.rs  mod.rs  reader.rs
src/restore/: args.rs  inject.rs  memory.rs  mod.rs  pid.rs  premap.rs  sigframe.rs  sigframe_ffi.rs
tests/: blob_execution.rs
