[package]
name = "crust"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"

[dependencies]
# Protobuf support for parsing CRIU images
prost = "0.13"
prost-types = "0.13"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# System calls
libc = "0.2"

[build-dependencies]
# For generating protobuf code from .proto files
prost-build = "0.13"
